--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,54 @@
-*{
-  background-image: url(../assets/img/twitter-backgrounds-16995-17549-hd-wallpapers.jpg);
+body{
+  background-image: url(../assets/img/more.jpg);
+  margin: 0;
+  font-family: 'PT Sans Caption', sans-serif;
+}
+
+.twitter{
+  background: #87CEEB;
+  width: 100%;
+  color: #FFF;
+  margin-top: 0;
+}
+
+.title{
+  margin: 0;
+  padding: 15px;
+  text-align: center;
+  font-family: Courier New, Courier, monospace;
+}
+
+.box1{
+  display: inline-block;
+  background: #FFF;
+  color: black;
+  width: 370px;
+  padding: 20px;
+  margin-left: 40px;
+  margin-top: 40px;
+  border-radius: 20px;
+}
+
+#hr{
+  border: 1px solid #F5F5F5;
+  background: #F5F5F5;
+}
+
+a{
+  text-decoration: none;
+  color: #4169E1;
+}
+
+.box2{
+  position: relative;
+  background: #FFF;
+  display: inline-block;
+}
+
+.textarea{
+  border-color: #FFF;
+}
+.btn{
+  background: #87CEEB;
+  color: #FFF;
 }
