--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,12 @@ body{
   font-family: 'PT Sans Caption', sans-serif;
 }
 
+.container{
+  margin-left: 60px;
+  margin-right: 60px;
+  margin-top: 40px;
+  height: 100px;
+}
 .twitter{
   background: #87CEEB;
   width: 100%;
@@ -22,11 +28,10 @@ body{
   display: inline-block;
   background: #FFF;
   color: black;
-  width: 370px;
+  width: 40%;
+  height: 190px;
   padding: 20px;
-  margin-left: 40px;
-  margin-top: 40px;
-  border-radius: 20px;
+  border-radius: 20px
 }
 
 #hr{
@@ -43,11 +48,30 @@ a{
   position: relative;
   background: #FFF;
   display: inline-block;
+  border-radius: 20px;
+  width: 40%;  
+  left: 50px;
+}
+
+.box-text{
+  margin-top: 10px;
+  margin-bottom: 15px;
+  padding: 20px;
+}
+
+#insert-links{
+  width: 500px;
+  height: 95px;
 }
 
 .textarea{
   border-color: #FFF;
 }
+
+.question{
+  border: none;
+}
+
 .btn{
   background: #87CEEB;
   color: #FFF;
