--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@ body{
   margin: 0;
   padding: 15px;
   text-align: center;
-  font-family: Courier New, Courier, monospace;
+  font-family: 'PT Sans Caption', sans-serif;
 }
 
 .box1{
@@ -51,16 +51,15 @@ a{
   border-radius: 20px;
   width: 40%;  
   left: 50px;
+  top: 20px;
 }
 
 .box-text{
-  margin-top: 10px;
-  margin-bottom: 15px;
   padding: 20px;
 }
 
 #insert-links{
-  width: 500px;
+  width: 300px;
   height: 95px;
 }
 
@@ -70,9 +69,42 @@ a{
 
 .question{
   border: none;
+  resize: none;
+  outline: none;
+  overflow: hidden;
+  width: 400px;
+  height: 60px;
 }
 
 .btn{
   background: #87CEEB;
   color: #FFF;
+  border: none;
+  border-radius: 15px; 
+  padding: 15px;
 }
+
+b{
+  margin-left: 380px;
+}
+
+#container-tweets{
+  margin-top: 20px;
+  width: 500px;
+  background: #FFF;
+  border-radius: 20px; 
+  
+}
+
+.tweets{
+  margin-top: 5px;
+  margin-bottom: 5px;
+  padding-left: 30px;
+
+}
+
+.times{
+  margin: 5px;
+  padding-left: 20px;
+}
+
